--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="container d-flex h-100">
+    <div class="row align-self-center w-100">
+        <div class="col-lg-8 mx-auto">
+            <h1 class="text-center">Welcome to Budget App</h1>
+            <p class="text-center">Sign up or register to get started</p>
+            <div class="d-flex justify-content-center">
+                <a href="#" class="btn btn-primary mr-3">Sign Up</a>
+                <a href="#" class="btn btn-secondary">Register</a>
+            </div>
+        </div>
+    </div>
+</div>
+
