--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,21 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <%if current_user%>
+      <%= render 'layouts/shared/navbar' %>
+      <%end%>
+    </header>
+    <% if not flash.empty? %>
+      <% if flash[:notice] %>
+      <div class="alert alert-info" role="alert"><%= notice %></div>
+      <% else %>
+      <div class="alert alert-danger" role="alert"><%= alert %></div>
+      <% end %>
+    <% end %>
+    <div class="container mt-4">
+      <%= yield %>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
