--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,6 +7,11 @@
   <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+    <% if f.object.errors[:name].any? %>
+    <div class="error-message">
+      <%= f.object.errors[:name].join(", ") %>
+    </div>
+  <% end %>
   </div>
 
   <div class="field">
