--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,14 @@
 <div class="container d-flex h-100">
     <div class="row align-self-center w-100">
         <div class="col-lg-8 mx-auto">
-            <h1 class="text-center">Welcome to Budget App</h1>
-            <p class="text-center">Sign up or register to get started</p>
+            <h1 class="text-center">The Budget App</h1>
+            <p class="text-center">You are Welcome !!</p>
             <div class="d-flex justify-content-center">
-                <a href="#" class="btn btn-primary mr-3">Sign Up</a>
-                <a href="#" class="btn btn-secondary">Register</a>
+                <%= button_to 'REGISTER', new_user_registration_path, method: :get, class: "btn btn-outline-info" %>
+                &nbsp;
+                &nbsp;
+                <%= button_to 'SIGN IN', new_user_session_path, class: "btn btn-outline-dark" %>
             </div>
         </div>
     </div>
 </div>
-
