--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,43 +1,31 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
-    <div class="container-fluid">
-      <%= link_to 'Budget App' , root_path , class: "navbar-brand" %>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+<nav class="navbar navbar-expand-lg bg-body-tertiary bg-light">
+  <div class="container-fluid">
+    <%= link_to 'Budget App' , root_path , class: "navbar-brand" %>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <% if user_signed_in? %>
+        <ul class="nav justify-content-end ms-5">
           <li class="nav-item">
-            <%= link_to "Recipes", root_path , class:"nav-link" %>
+            <span class="nav-link disabled">Hello, <%= current_user.name %> </span>
           </li>
-  
           <li class="nav-item">
-            <%= link_to "Public Recipes", root_path , class:"nav-link" %>
+            <%= link_to 'Sign out' ,destroy_user_session_path, :method=>
+            :delete, class:"nav-link" %>
           </li>
-  
-          <li class="nav-item">
-            <%= link_to "Foods", root_path , class:"nav-link" %>
-          </li>
-          <% if user_signed_in? %>
-          <ul class="nav justify-content-end ms-5">
-            <li class="nav-item">
-              <span class="nav-link disabled">Signed in as <%= current_user.email %></span>
-            </li>
-            <li class="nav-item">
-              <%= link_to 'Sign out',destroy_user_session_path, :method => :delete,  class:"nav-link" %>
-            </li>
-          </ul>
-          <% else %>
-            <ul class="nav justify-content-end ms-5">
-              <li class="nav-item">
-                <%= link_to 'Register', new_user_registration_path,class:'nav-link' %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'Sign in', new_user_session_path, class:'nav-link' %>
-              </li>
-            </ul>
-          <% end %>
         </ul>
-      </div>
+        <% end %>
+      </ul>
     </div>
-  </nav>
-  
+  </div>
+</nav>
