--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,2 +1,23 @@
-<h1>Category#index</h1>
-<p>Find me in app/views/category/index.html.erb</p>
+<div class="container mt-4">
+    <h3 class="display-1 text-center">Categories</h3>
+    <hr>
+    <table class="table">
+    <thead>
+        <tr>
+        <th scope="col">#</th>
+        <th scope="col">Icon</th>
+        <th scope="col">Total Amount</th>
+        <th scope="col">Name</th>
+    </thead>
+    <tbody>
+        <% @categories.each do |category| %>
+            <%= render category%>
+        <% end %>
+    </tbody>
+    </table>
+</div>
+<div class="btn-container">
+    <%= link_to new_category_path, class:"link-container" do %>
+        <button class="btn btn-success">Add Category</button>
+    <% end %>
+</div>
