--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary bg-light">
   <div class="container-fluid">
-    <%= link_to 'Budget App' , root_path , class: "navbar-brand" %>
+    <%= link_to '<' , request.referrer || root_path , class: "navbar-brand" %>
     <button
       class="navbar-toggler"
       type="button"
