--- a/app/views/transaction_items/index.html.erb
+++ b/app/views/transaction_items/index.html.erb
@@ -1,2 +1,15 @@
-<h1>TransactionItems#index</h1>
-<p>Find me in app/views/transaction_items/index.html.erb</p>
+<% if @transactions.present? %>
+<h3><%= @transactions.first.category.total_amount %></h3>
+<ul>
+  <%@transactions.each do |transaction|%>
+  <li><%= transaction.transaction_item.name %></li>
+  <li><%= transaction.transaction_item.amount %></li>
+  <%end%>
+</ul>
+<% end %>
+
+<div class="btn-container">
+    <%= link_to new_category_transaction_item_path(category_id: params[:category_id]), class:"link-container" do %>
+        <button class="btn btn-success">Add Transaction</button>
+    <% end %>
+</div>
