--- a/app/views/transaction_items/new.html.erb
+++ b/app/views/transaction_items/new.html.erb
@@ -1,2 +1,16 @@
-<h1>TransactionItems#new</h1>
-<p>Find me in app/views/transaction_items/new.html.erb</p>
+<%= form_with model: @transaction_item, method: :post, url: category_transaction_items_path(@category_id), scope:
+    :new_transaction_item, local:true do |form| %>
+    <h3 class="display-3">Create Transaction</h3>
+    <hr />
+    <div class="mb-3">
+        <%= form.label :name,class:"form-label"%>
+            <%= form.text_field :name,class:"form-control", :required=> true %>
+    </div>
+    <div class="mb-3">
+        <%= form.label :amount,class:"form-label"%>
+            <%= form.text_field :amount,class:"form-control", :required=> true %>
+    </div>
+    <div class="mb-3 text-center">
+        <%= form.submit "Add Transaction" ,disable_with:"Creating Transaction...", class:"btn btn-success" %>
+    </div>
+    <%end%>
