--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,21 +1,20 @@
-<div class="container mt-4">
-    <h3 class="display-1 text-center">Categories</h3>
-    <hr>
-    <table class="table">
-    <thead>
-        <tr>
-        <th scope="col">#</th>
-        <th scope="col">Icon</th>
-        <th scope="col">Total Amount</th>
-        <th scope="col">Name</th>
-    </thead>
-    <tbody>
-        <% @categories.each do |category| %>
-            <%= render category%>
-        <% end %>
-    </tbody>
-    </table>
-</div>
+<div class="row">
+    <% @categories.each do |category| %>
+      <div class="col-md-12 mb-3">
+        <div class="card w-100">
+          <div class="card-body d-flex">
+            <div class="flex-grow-1">
+              <img src="<%= category.icon %>"class="card-img-top responsive-img" alt="icon">
+              <%= link_to category.name, category_transaction_items_path(category.id), method: :get, class:"card-link text-decoration-none" %>
+            </div>
+            <div class="text-right">
+              <%= category.total_amount %>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
 <div class="btn-container">
     <%= link_to new_category_path, class:"link-container" do %>
         <button class="btn btn-success">Add Category</button>
