--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,40 +1,52 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "needs-validation", novalidate: true }) do |f| %>
   
-<%= render "devise/shared/error_messages", resource: resource %>
+  <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
-    <% if f.object.errors[:name].any? %>
-    <div class="error-message">
-      <%= f.object.errors[:name].join(", ") %>
+  <div class="mb-3">
+    <%= f.label :name, class: "form-label" %>
+    <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control", required: true %>
+    <div class="invalid-feedback">
+      <% if f.object.errors[:name].any? %>
+        <%= f.object.errors[:name].join(", ") %>
+      <% else %>
+        Please enter your name.
+      <% end %>
     </div>
-  <% end %>
   </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
+  <div class="mb-3">
+    <%= f.label :email, class: "form-label" %>
+    <%= f.email_field :email, autocomplete: "email", class: "form-control", required: true %>
+    <div class="invalid-feedback">
+      Please enter a valid email address.
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
+  <div class="mb-3">
+    <%= f.label :password, class: "form-label" %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+      <small class="text-muted">(<%= @minimum_password_length %> characters minimum)</small>
+    <% end %>
+    <%= f.password_field :password, autocomplete: "new-password", class: "form-control", required: true %>
+    <div class="invalid-feedback">
+      Please enter a password.
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="mb-3">
+    <%= f.label :password_confirmation, class: "form-label" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", required: true %>
+    <div class="invalid-feedback">
+      Please confirm your password.
+    </div>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="mb-3">
+    <%= f.submit "Sign up", class: "btn btn-primary" %>
   </div>
+  
 <% end %>
 
 <%= render "devise/shared/links" %>
