--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,6 +1,8 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary bg-light">
+<nav class="navbar navbar-expand-lg bg-body-tertiary header-nav-bg">
   <div class="container-fluid">
-    <%= link_to '<' , request.referrer || root_path , class: "navbar-brand" %>
+    <%= link_to categories_path, class: "navbar-brand" do %>
+    <i class="bi bi-arrow-left"></i>
+  <% end %>  
     <button
       class="navbar-toggler"
       type="button"
