--- a/app/views/transaction_items/index.html.erb
+++ b/app/views/transaction_items/index.html.erb
@@ -1,13 +1,19 @@
 <% if @transactions.present? %>
-<h3><%= @transactions.first.category.total_amount %></h3>
-<ul>
-  <%@transactions.each do |transaction|%>
-  <li><%= transaction.transaction_item.name %></li>
-  <li><%= transaction.transaction_item.amount %></li>
+<%@transactions.each do |transaction|%>
+  <div class="col-md-12 mb-3">
+    <div class="card w-100">
+      <div class="card-body d-flex">
+        <div class="flex-grow-1">
+            <%= transaction.transaction_item.name %>          
+        </div>
+        <div class="text-right">
+            <%= transaction.transaction_item.amount %>
+        </div>
+      </div>
+    </div>
+  </div>
   <%end%>
-</ul>
 <% end %>
-
 <div class="btn-container">
     <%= link_to new_category_transaction_item_path(category_id: params[:category_id]), class:"link-container" do %>
         <button class="btn btn-success">Add Transaction</button>
