--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,11 +3,11 @@
       <div class="col-md-12 mb-3">
         <div class="card w-100">
           <div class="card-body d-flex">
-            <div class="flex-grow-1">
+            <div class="flex-grow-1 name">
               <img src="<%= category.icon %>"class="card-img-top responsive-img" alt="icon">
               <%= link_to category.name, category_transaction_items_path(category.id), method: :get, class:"card-link text-decoration-none" %>
             </div>
-            <div class="text-right">
+            <div class="text-right amount">
               <%= category.total_amount %>
             </div>
           </div>
