--- a/app/views/transaction_items/index.html.erb
+++ b/app/views/transaction_items/index.html.erb
@@ -3,10 +3,10 @@
   <div class="col-md-12 mb-3">
     <div class="card w-100">
       <div class="card-body d-flex">
-        <div class="flex-grow-1">
+        <div class="flex-grow-1 name">
             <%= transaction.transaction_item.name %>          
         </div>
-        <div class="text-right">
+        <div class="text-right amount">
             <%= transaction.transaction_item.amount %>
         </div>
       </div>
