--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
         <% if user_signed_in? %>
         <ul class="nav justify-content-end ms-5">
           <li class="nav-item">
-            <span class="nav-link disabled">Hello, <%= current_user.name %> </span>
+            <span class="nav-link name">Hello, <%= current_user.name %> </span>
           </li>
           <li class="nav-item">
             <%= link_to 'Sign out' ,destroy_user_session_path, :method=>
