--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -9,7 +9,7 @@
     <%= form.label :icon,class:"form-label"%>
       <%= form.text_field :icon,class:"form-control", :required=> true %>
   </div>
-  <div class="mb-3 text-center">
+  <div>
     <%= form.submit "Add Category",disable_with:"Creating Category...", class:"btn btn-success" %>
 </div>
   <%end%>
